--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Miami Trash Talk</title>
 
 <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="js/jquery.scrollTo.js"></script>
-<link rel="stylesheet" media="screen and (max-width: 1900px)" type="text/css" href="css/style.css">
+<link rel="stylesheet" media="screen/print" type="text/css" href="css/style.css">
 
 <script>
 
